--- a/templates/block/block--system-branding-block.html.twig
+++ b/templates/block/block--system-branding-block.html.twig
@@ -34,7 +34,7 @@
       data-target="#searchbar-collapse"
       role="button" aria-expanded="false" aria-controls="searchbar-collapse">
 
-      <i class="fa fa-search"></i><span class="sr-only">Toggle Search</span>
+      <i class="fa fa-search"></i><span class="sr-only visually-hidden">Toggle Search</span>
     </button>
   </div>
 
@@ -49,7 +49,7 @@
           action="https://search3.nrel.gov/texis/search/">
 
           <div class="form-group">
-            <label for="query" class="sr-only">Search theSOURCE</label>
+            <label for="query" class="sr-only visually-hidden">Search theSOURCE</label>
             <input TYPE="hidden" NAME="pr" value="metasource">
             <input type="text" id="query" name="query"
                    maxlength="2047"
@@ -75,7 +75,7 @@
           action="https://search3.nrel.gov/texis/search/">
 
           <div class="form-group">
-            <label for="query" class="sr-only">Search theSOURCE</label>
+            <label for="query" class="sr-only visually-hidden">Search theSOURCE</label>
             <input TYPE="hidden" NAME="pr" value="metasource">
             <input type="text" id="query" name="query"
                    maxlength="2047"
@@ -90,7 +90,7 @@
         <form action="https://thesource.nrel.gov/phonebook/index.html" method="post"
               class="searchbar-form form-inline">
           <div class="form-group">
-            <label for="emp-search" class="sr-only">Search Employee Directory</label>
+            <label for="emp-search" class="sr-only visually-hidden">Search Employee Directory</label>
             <input id="emp-search" type="text" placeholder="Search Employee Directory"
                    name="zzsearch" class="form-control">
             <button type="submit" class="btn btn-default">Search</button>
