--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -126,7 +126,7 @@
                         aria-expanded="false" aria-controls="collapsemenu"><span
                             class="navbar-toggler-icon"></span><span class="navbar-toggle-label"> menu</span></button>
                 <div class="collapse navbar-collapse" id="collapsemenu">
-                    <nav class="sidenav flex-column">
+                    <nav class="flex-column">
                       {% if page.secondary_menu %}
 
                           {{ page.secondary_menu }}
@@ -142,7 +142,7 @@
 <div class=" {{ container }}">
     <div class="row mt-3 mt-lg-0">
         <div class="col-lg-3 d-none d-lg-block">
-            <nav class="sidenav flex-column">
+            <nav class="flex-column">
               {% if page.secondary_menu %}
 
                   {{ page.secondary_menu }}
