--- a/css/style.css
+++ b/css/style.css
@@ -127,116 +127,116 @@ abbr[data-original-title], abbr[title] {
 }
 
 #block-thesource-bootstrap-thesourcemenuandsearch {
-  width: 100%;
+    width: 100%;
 }
 
 .sidenav, .nav {
-  width: 100%;
+    width: 100%;
 }
 .row > .sidenav {
-  padding-left: 0;
-  padding-right: 0;
+    padding-left: 0;
+    padding-right: 0;
 }
 .navbar-nav {
-  float: left;
+    float: left;
 }
 .corporate-topnav .navbar-light .navbar-nav .dropdown-menu.show > li > a {
-  display: block !important;
+    display: block !important;
 }
 .navbar-light .navbar-nav > li ul.show > a:hover, .navbar-light .navbar-nav > li ul.show > a:focus {
-  background-color: #ccc;
-  color: #000;
+    background-color: #ccc;
+    color: #000;
 }
 .navbar-light .navbar-nav .show.dropdown-menu > li > a {
-  background-color: #282e2e;
-  color: #62d2ff;
-  padding: 10px 10px 10px 15px;
+    background-color: #282e2e;
+    color: #62d2ff;
+    padding: 10px 10px 10px 15px;
 }
 
 @media (min-width: 768px) {
-  .navbar-light .navbar-nav .show.dropdown-menu > li > a {
-    background-color: #5e6a71;
-    color: #fff;
-  }
+    .navbar-light .navbar-nav .show.dropdown-menu > li > a {
+        background-color: #5e6a71;
+        color: #fff;
+    }
 }
 
 .navbar-light .navbar-nav .show.dropdown-menu > li > a:hover, .navbar-light .navbar-nav .show.dropdown-menu > li > a:focus {
-  background-color: #0B5E90;
-  color: #fff;
+    background-color: #0B5E90;
+    color: #fff;
 }
 
 .navbar-light .navbar-nav .show.dropdown-menu > li > a .fa-home {
-  position: absolute;
-  right: 10px;
-  top: 15px;
+    position: absolute;
+    right: 10px;
+    top: 15px;
 }
 
 .navbar-light .navbar-nav .show.dropdown-menu > li > a {
-  position: relative;
+    position: relative;
 }
 .corporate-topnav .navbar-light .navbar-nav .show.dropdown-menu > li > a {
-  background-color: #dddedf;
-  display: block !important;
-  color: #004677;
+    background-color: #dddedf;
+    display: block !important;
+    color: #004677;
 }
 
 .corporate-topnav .navbar-light .navbar-nav .show.dropdown-menu a.dropdown-item:after {
-  content: '\f0da';
-  font-family: FontAwesome;
-  font-weight: normal;
-  font-style: normal;
-  margin: 0px 0px 0px 10px;
-  text-decoration: none;
+    content: '\f0da';
+    font-family: FontAwesome;
+    font-weight: normal;
+    font-style: normal;
+    margin: 0px 0px 0px 10px;
+    text-decoration: none;
 }
 
 @media (min-width: 768px) {
-  .corporate-topnav .navbar-light .navbar-nav .show.dropdown-menu > li > a {
-    background-color: #dddedf;
-    color: #004677;
-  }
+    .corporate-topnav .navbar-light .navbar-nav .show.dropdown-menu > li > a {
+        background-color: #dddedf;
+        color: #004677;
+    }
 }
 
 .corporate-topnav .navbar-light .navbar-nav .show.dropdown-menu > li > a:hover, .corporate-topnav .navbar-light .navbar-nav .show.dropdown-menu > li > a:focus {
-  background-color: #0B5E90;
-  color: #fff;
+    background-color: #0B5E90;
+    color: #fff;
 }
 .corporate-topnav .navbar-light .navbar-nav .show.dropdown-menu {
-  background-color: #5e6a71;
-  border-top: 0;
-  font-size: 14px;
-  left: 0;
-  position: absolute;
-  right: auto;
-  width: 100%;
+    background-color: #5e6a71;
+    border-top: 0;
+    font-size: 14px;
+    left: 0;
+    position: absolute;
+    right: auto;
+    width: 100%;
 }
 
 @media (min-width: 768px) {
-  .corporate-topnav .navbar-light .navbar-nav .show.dropdown-menu {
-    display: block;
-    left: auto;
-    width: auto;
-    margin: 0;
-    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
-  }
+    .corporate-topnav .navbar-light .navbar-nav .show.dropdown-menu {
+        display: block;
+        left: auto;
+        width: auto;
+        margin: 0;
+        -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+        box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+    }
 }
 
 
-  @media (min-width: 768px) {
-  .navbar-light .navbar-nav > li ul.show a:hover, .navbar-light .navbar-nav > li ul.show a:focus {
-    background-color: #ccc;
-    border-color: transparent;
-  }
+@media (min-width: 768px) {
+    .navbar-light .navbar-nav > li ul.show a:hover, .navbar-light .navbar-nav > li ul.show a:focus {
+        background-color: #ccc;
+        border-color: transparent;
+    }
 }
 
 
 .searchbar {
-  float: right;
-  margin-top: 7px;
+    float: right;
+    margin-top: 7px;
 }
 
 .emp-search {
-  margin-right: 4px;
+    margin-right: 4px;
 }
 
 .navbar-nav > section {
@@ -272,42 +272,56 @@ form .card .card-body {
     padding: 0;
 }
 form label.form-required:after, form h2.form-required:after {
-     content: "(Required)";
-     width: auto;
-     height: auto;
-     margin: 0 0.3em;
-     color: black;
-     font-weight: normal;
-     font-size: 16px;
-     vertical-align: initial;
-     background-image: none;
-     display: inline-block;
-     line-height: 1;
-     color: #333;
+    content: "(Required)";
+    width: auto;
+    height: auto;
+    margin: 0 0.3em;
+    color: black;
+    font-weight: normal;
+    font-size: 16px;
+    vertical-align: initial;
+    background-image: none;
+    display: inline-block;
+    line-height: 1;
+    color: #333;
 }
 
 /* The logo.svg that we have is offset by 6px compared to the png in the template. */
 header .logo {
-  margin-left: -6px;
+    margin-left: -6px;
 }
 
-/*  Accordions - based on the styles from the source-template.html file, adapted fro use with the lb_tabs accordions. */
-.ui-accordion .ui-accordion-header {
+/*  Accordions - based on the styles from the source-template.html file, adapted for use with the lb_tabs accordions. */
+.ui-accordion .ui-accordion-header,
+.accordion .accordion-item {
     -webkit-box-shadow: none;
     box-shadow: none;
     border-color: #127BBF;
     font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     background-image: none;
     background-color: white;
-    margin-bottom: 12px;
     padding: 0px;
     border-radius: 0px;
     font-weight: 300;
 }
+.ui-accordion .ui-accordion-header {
+    margin-bottom: 12px;
+}
+.accordion .accordion-item {
+    margin-bottom: 12px;
+}
 .ui-accordion .ui-accordion-header span {
     display: none;
 }
-.ui-accordion .ui-accordion-header a {
+.accordion .accordion-header .accordion-button {
+    padding: 0;
+}
+.accordion .accordion-header .accordion-button::after {
+    background-image: none;
+    width: 0;
+}
+.ui-accordion .ui-accordion-header a,
+.accordion .accordion-header a {
     margin-left:0px;
     padding: 10px 15px 10px 40px;
     display: block;
@@ -318,19 +332,26 @@ header .logo {
     background-position: 1% center;
     background-size: 25px 25px;
 }
-.ui-accordion .ui-accordion-header.ui-accordion-header-active {
+.ui-accordion .ui-accordion-header.ui-accordion-header-active,
+.accordion .accordion-header .accordion-button:not(.collapsed) {
     margin-bottom: 0px;
 }
-.ui-accordion .ui-accordion-header.ui-accordion-header-active a {
+.ui-accordion .ui-accordion-header.ui-accordion-header-active a,
+.accordion .accordion-header .accordion-button:not(.collapsed) a {
     background-image: url('../images/icon_minus.svg');
     color:#fff;
     background-color: #127BBF;
 }
-.ui-accordion .ui-accordion-header:first-child {
+.accordion .accordion-item:not(:first-of-type) {
+    border-top: 1px solid #127BBF;
+}
+.ui-accordion .ui-accordion-header:first-child,
+.accordion .accordion-item:first-child {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
-.ui-accordion .ui-accordion-header:last-of-type {
+.ui-accordion .ui-accordion-header:last-of-type,
+.accordion .accordion-item:last-of-type {
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
 }
@@ -358,30 +379,30 @@ header .logo {
     border-bottom-right-radius: 4px;
 }
 .banner-logo {
-  max-height: 56px;
+    max-height: 56px;
 }
 
 .searchbar-form {
-  margin-top: 7px;
+    margin-top: 7px;
 }
 
 .banner-logo .col-md-6 {
-  margin-top: 20px;
+    margin-top: 20px;
 }
 
 .navbar {
-  height: 52px;
+    height: 52px;
 }
 
 .navbar .form-group {
-  margin-top: -80px;
+    margin-top: -80px;
 }
 
 .searchbar-form {
-  margin-top: 40px;
+    margin-top: 40px;
 }
 
 .searchbar-form .form-control {
-  font-size: 0.9rem;
-  width: 200px;
+    font-size: 0.9rem;
+    width: 200px;
 }
