--- a/templates/lb_tabs/accordion/lb-tabs-accordion.html.twig
+++ b/templates/lb_tabs/accordion/lb-tabs-accordion.html.twig
@@ -7,23 +7,31 @@
   {% endif %}
 
   <div {{ region_attributes["content_blocks"].addClass('lb-tabs-accordion').setAttribute('id', "#{settings.dom_id}") }}>
-    {# Iterate over both arrays. The build is guaranteed to have equal numberr of items. #}
+    
+    {# Iterate over both arrays. The build is guaranteed to have equal number of items. #}
     {% set labelKeys = content.label_blocks|keys|filter(k => k|first != '#') %}
     {% set contentKeys = content.content_blocks|keys|filter(k => k|first != '#') %}
     {% for i, labelKey in labelKeys %}
       {% set contentKey = contentKeys[i] %}
       {% set labelBlock = content.label_blocks[labelKey] %}
       {% set contentBlock = content.content_blocks[contentKey] %}
-      <h4>
-        <a href="#">{{ labelBlock }}</a>
-      </h4>
-      <div>
-        {{ contentBlock }}
-      </div>
+
+			{# Checks whether the accordion has content to be rendered #}
+			{% if contentBlock.content is not empty %}
+        <h4>
+          <a href="#">{{ labelBlock }}</a>
+        </h4>
+        <div>
+          {{ contentBlock }}
+        </div>
+      {% endif %}
     {% endfor %}
+    
     {# Output anything remaining #}
     {% for i, contentKey in contentKeys if labelKeys[i] is not defined %}
-      {{ content.content_blocks[contentKey] }}
+			{% if content.content_blocks[contentKey] is not empty %}
+        {{ content.content_blocks[contentKey] }}
+      {% endif %}
     {% endfor %}
   </div>
 {% endif %}
