Correct the links on the source navigation block.

--- a/templates/block/block--sourcenavigation.html.twig
+++ b/templates/block/block--sourcenavigation.html.twig
@@ -52,26 +52,26 @@
 <ul class="navbar-nav">
 					<li class="dropdown nav-item" data-topnav="organizations"><a class="dropdown-toggle nav-link" href="#" data-bs-toggle="dropdown">Organizations </a>
 						<ul class="dropdown-menu" role="menu">
-							<li class="nav-item"><a href="/procurement/index.html" class="nav-link">Acquisition Services</a></li>
-							<li class="nav-item"><a href="/best/index.html" class="nav-link">Bioenergy Science &amp; Technology</a></li>
-							<li class="nav-item"><a href="/communications/" class="nav-link">Communications</a></li>
-							<li class="nav-item"><a href="/director/" class="nav-link">Director</a></li>
-							<li class="nav-item"><a href="/inclusion/index.html" class="nav-link">Diversity, Equity, &amp; Inclusion</a></li>
-							<li class="nav-item"><a href="/esh/index.html" class="nav-link">Environment, Safety, Health, &amp; Quality</a></li>
-							<li class="nav-item"><a href="/general-counsel/" class="nav-link">General Counsel</a></li>
-							<li class="nav-item"><a href="/government-relations/index.html" class="nav-link">Government Relations</a></li>
-							<li class="nav-item"><a href="/hr/" class="nav-link">Human Resources</a></li>
-							<li class="nav-item"><a href="/its/index.html" class="nav-link">Information Technology Services</a></li>
-							<li class="nav-item"><a href="/ipo/" class="nav-link">Innovation, Partnering, &amp; Outreach</a></li>
-							<li class="nav-item"><a href="/internal-audit/" class="nav-link">Internal Audit</a></li>
-							<li class="nav-item"><a href="/ipid/index.html" class="nav-link">Institutional Planning, Integration, &amp; Development</a></li>
-							<li class="nav-item"><a href="/security/" class="nav-link">Lab Protection</a></li>
-							<li class="nav-item"><a href="/mcst/index.html" class="nav-link">Materials, Chemical &amp; Computational Science</a></li>
-							<li class="nav-item"><a href="/ocfo/index.html" class="nav-link">Office of the CFO</a></li>
-							<li class="nav-item"><a href="/ombuds/" class="nav-link">Ombuds</a></li>
-							<li class="nav-item"><a href="/science-technology/index.html" class="nav-link">Science &amp; Technology</a></li>
-							<li class="nav-item"><a href="/site-operations/index.html" class="nav-link">Site Operations</a></li>
-							<li class="nav-item"><a href="/techtransfer/" class="nav-link">Technology Transfer</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/procurement/index.html" class="nav-link">Acquisition Services</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/best/index.html" class="nav-link">Bioenergy Science &amp; Technology</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/communications/" class="nav-link">Communications</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/director/" class="nav-link">Director</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/inclusion/index.html" class="nav-link">Diversity, Equity, &amp; Inclusion</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/esh/index.html" class="nav-link">Environment, Safety, Health, &amp; Quality</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/general-counsel/" class="nav-link">General Counsel</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/government-relations/index.html" class="nav-link">Government Relations</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/hr/" class="nav-link">Human Resources</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/its/index.html" class="nav-link">Information Technology Services</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/ipo/" class="nav-link">Innovation, Partnering, &amp; Outreach</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/internal-audit/" class="nav-link">Internal Audit</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/ipid/index.html" class="nav-link">Institutional Planning, Integration, &amp; Development</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/security/" class="nav-link">Lab Protection</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/mcst/index.html" class="nav-link">Materials, Chemical &amp; Computational Science</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/ocfo/index.html" class="nav-link">Office of the CFO</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/ombuds/" class="nav-link">Ombuds</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/science-technology/index.html" class="nav-link">Science &amp; Technology</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/site-operations/index.html" class="nav-link">Site Operations</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/techtransfer/" class="nav-link">Technology Transfer</a></li>
 						</ul>
 					</li>
 					<li class="dropdown nav-item" data-topnav="tools"><a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown">Business Tools </a>
@@ -93,7 +93,7 @@
 							<li class="nav-item"><a href="/business-tools/index.html" class="nav-link">See All</a></li>
 						</ul>
 					</li>
-					<li class="nav-item"><a href="/src-index/index.html" class="nav-link">A-Z Index</a></li>
+					<li class="nav-item"><a href="https://thesource.nrel.gov/src-index/index.html" class="nav-link">A-Z Index</a></li>
 				</ul>
 <!--startindex-->
 <!-- == END TOP NAVIGATION == -->
